Bug 625425 - Don't re-share the plugin surfaces every time we flip front/back buffers on Windows. r=jimm,karlt, a=blocking