dom/plugins/ipdl.mk
@@ -42,4 +42,5 @@ IPDLSRCS = \
   PBrowserStream.ipdl \
   PPluginStream.ipdl \
   PStreamNotify.ipdl \
+  PPluginSurface.ipdl \
   $(NULL)
